--- a/react-app/src/component/style.css
+++ b/react-app/src/component/style.css
@@ -1,4 +1,4 @@
-main {
+body {
     background: url(https://i.pinimg.com/564x/42/4e/ae/424eae6af416dbcf83cfe6930a9f2bba.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
